--- a/etc-.html
+++ b/etc-.html
@@ -21,7 +21,7 @@
   <meta name="twitter:description" content="Personal Website." />
   
 
-<meta name="author" content="Etc. | Apurva Nakade" />
+<meta name="author" content="email: “a” + lowercase(lastname) + “@uwo.ca”   CV, Research Statement (outdated)" />
 
 
 
@@ -30,7 +30,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
   
   <link rel="shortcut icon" href="images/sisyphus.svg" type="image/x-icon" />
-<link rel="prev" href="teaching.html"/>
+<link rel="prev" href="research.html"/>
 
 <script src="libs/header-attrs-2.3/header-attrs.js"></script>
 <script src="libs/jquery-2.2.3/jquery.min.js"></script>
@@ -53,7 +53,7 @@
 <!-- start header file -->
 <!-- This file gets included in the header of each .html -->
 
-<link href="css/gitbook/normalize.css" rel="stylesheet" />
+<link href="css/gitbook/style.css" rel="stylesheet" />
 <link href="css/gitbook/plugin-table.css" rel="stylesheet" />
 <link href="css/gitbook/plugin-bookdown.css" rel="stylesheet" />
 <link href="css/gitbook/plugin-highlight.css" rel="stylesheet" />
@@ -81,39 +81,33 @@
       <nav role="navigation">
 
 <ul class="summary">
-<li class="chapter" data-level="" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i>Apurva Nakade</a></li>
+<li><a href="index.html#section"></a></li>
 <li class="chapter" data-level="" data-path="me-math-machine.html"><a href="me-math-machine.html"><i class="fa fa-check"></i>Me, Math, Machine</a>
 <ul>
 <li class="chapter" data-level="" data-path="me-math-machine.html"><a href="me-math-machine.html#learning-to-lean"><i class="fa fa-check"></i>Learning to Lean</a></li>
 <li class="chapter" data-level="" data-path="me-math-machine.html"><a href="me-math-machine.html#read-more"><i class="fa fa-check"></i>Read more</a></li>
 </ul></li>
-<li class="chapter" data-level="" data-path="math-projects.html"><a href="math-projects.html"><i class="fa fa-check"></i>Math Projects</a>
-<ul>
-<li class="chapter" data-level="" data-path="math-projects.html"><a href="math-projects.html#current-projects"><i class="fa fa-check"></i>Current Projects</a>
-<ul>
-<li class="chapter" data-level="" data-path="math-projects.html"><a href="math-projects.html#groups-in-equivariant-elliptic-cohomology"><i class="fa fa-check"></i>2-groups in Equivariant Elliptic Cohomology</a></li>
-<li class="chapter" data-level="" data-path="math-projects.html"><a href="math-projects.html#groups-in-hott"><i class="fa fa-check"></i>2-groups in HoTT</a></li>
-<li class="chapter" data-level="" data-path="math-projects.html"><a href="math-projects.html#proof-formalization"><i class="fa fa-check"></i>Proof Formalization</a></li>
-</ul></li>
-<li class="chapter" data-level="" data-path="math-projects.html"><a href="math-projects.html#past-projects"><i class="fa fa-check"></i>Past Projects</a>
-<ul>
-<li class="chapter" data-level="" data-path="math-projects.html"><a href="math-projects.html#an-application-of-the-h-principle-to-manifold-calculus."><i class="fa fa-check"></i>An application of the h-principle to Manifold Calculus.</a></li>
-<li class="chapter" data-level="" data-path="math-projects.html"><a href="math-projects.html#protein-folding-using-markov-chains"><i class="fa fa-check"></i>Protein folding using Markov chains</a></li>
-<li class="chapter" data-level="" data-path="math-projects.html"><a href="math-projects.html#projects-that-did-not-quite-work-out"><i class="fa fa-check"></i>Projects that did not quite work out</a></li>
-</ul></li>
-</ul></li>
 <li class="chapter" data-level="" data-path="teaching.html"><a href="teaching.html"><i class="fa fa-check"></i>Teaching</a>
 <ul>
 <li class="chapter" data-level="" data-path="teaching.html"><a href="teaching.html#directed-reading-program"><i class="fa fa-check"></i>Directed Reading Program</a></li>
-<li class="chapter" data-level="" data-path="teaching.html"><a href="teaching.html#canadausa-mathcamp"><i class="fa fa-check"></i>Canada/USA Mathcamp</a>
-<ul>
-<li><a href="teaching.html#canadausa-mathcamp-20202020"><span><img src="images/mathcamp-icon.png" alt="Canada/USA Mathcamp" /> 2020</span></a></li>
-<li><a href="teaching.html#canadausa-mathcamp-20192019"><span><img src="images/mathcamp-icon.png" alt="Canada/USA Mathcamp" /> 2019</span></a></li>
-<li><a href="teaching.html#canadausa-mathcamp-20182018"><span><img src="images/mathcamp-icon.png" alt="Canada/USA Mathcamp" /> 2018</span></a></li>
-<li><a href="teaching.html#canadausa-mathcamp-20172017"><span><img src="images/mathcamp-icon.png" alt="Canada/USA Mathcamp" /> 2017</span></a></li>
-</ul></li>
+<li class="chapter" data-level="" data-path="teaching.html"><a href="teaching.html#canadausa-mathcamp"><i class="fa fa-check"></i>Canada/USA Mathcamp</a></li>
 <li class="chapter" data-level="" data-path="teaching.html"><a href="teaching.html#johns-hopkins-university"><i class="fa fa-check"></i>Johns Hopkins University</a></li>
 <li class="chapter" data-level="" data-path="teaching.html"><a href="teaching.html#expository-notes"><i class="fa fa-check"></i>Expository Notes</a></li>
+</ul></li>
+<li class="chapter" data-level="" data-path="research.html"><a href="research.html"><i class="fa fa-check"></i>Research</a>
+<ul>
+<li class="chapter" data-level="" data-path="research.html"><a href="research.html#current-projects"><i class="fa fa-check"></i>Current Projects</a>
+<ul>
+<li class="chapter" data-level="" data-path="research.html"><a href="research.html#groups-in-equivariant-elliptic-cohomology"><i class="fa fa-check"></i>2-groups in Equivariant Elliptic Cohomology</a></li>
+<li class="chapter" data-level="" data-path="research.html"><a href="research.html#groups-in-hott"><i class="fa fa-check"></i>2-groups in HoTT</a></li>
+<li class="chapter" data-level="" data-path="research.html"><a href="research.html#proof-formalization"><i class="fa fa-check"></i>Proof Formalization</a></li>
+</ul></li>
+<li class="chapter" data-level="" data-path="research.html"><a href="research.html#past-projects"><i class="fa fa-check"></i>Past Projects</a>
+<ul>
+<li class="chapter" data-level="" data-path="research.html"><a href="research.html#an-application-of-the-h-principle-to-manifold-calculus."><i class="fa fa-check"></i>An application of the h-principle to Manifold Calculus.</a></li>
+<li class="chapter" data-level="" data-path="research.html"><a href="research.html#protein-folding-using-markov-chains"><i class="fa fa-check"></i>Protein folding using Markov chains</a></li>
+<li class="chapter" data-level="" data-path="research.html"><a href="research.html#projects-that-did-not-quite-work-out"><i class="fa fa-check"></i>Projects that did not quite work out</a></li>
+</ul></li>
 </ul></li>
 <li class="chapter" data-level="" data-path="etc-.html"><a href="etc-.html"><i class="fa fa-check"></i>Etc.</a></li>
 <li class="divider"></li>
@@ -141,8 +135,8 @@
 <p><a href="https://www.gocomics.com/sarahs-scribbles/2014/1/17"><img src="images/books.gif" width="250px" class="right" /></a></p>
 <p>Fun for me is <a href="./blog/art/books/index.html">reading books</a> and writing on <a href="./blog">my blog</a> about random
 things. I love to <a href="https://drive.google.com/open?id=1wpCR64gzKc7Zp8V-FIn43ANMA6QULjMS&amp;usp=sharing">travel</a>. I type in <a href="https://en.wikipedia.org/wiki/Dvorak_Simplified_Keyboard">dvorak</a>.</p>
-<p>I love to design websites like this one, and <a href="https://github.com/apurvnakade/HugoTheme">my blog's theme</a>
-using <a href="https://gohugo.io/">Hugo</a>. I have also started a couple of wikis for dumping <a href="https://www.notion.so/Math-Wiki-01783c0807aa4fa18d7d28a7f724fcde">math-ed
+<p>I love designing websites like this one (built using <a href="https://bookdown.org/">bookdown</a>) and <a href="https://github.com/apurvnakade/HugoTheme">my blog's theme</a>
+(built using <a href="https://gohugo.io/">Hugo</a>). I have also started a couple of wikis for dumping <a href="https://www.notion.so/Math-Wiki-01783c0807aa4fa18d7d28a7f724fcde">math-ed
 resources</a> and <a href="https://www.notion.so/Wiki-1b656cca9c964d79b932d4c76cc8ed7d">computer hacks</a>.</p>
 <p>In a past life I was involved with and highly recommend the following:</p>
 <ul>
@@ -170,7 +164,7 @@ resources</a> and <a href="https://www.notion.so/Wiki-1b656cca9c964d79b932d4c76c
           </div>
         </div>
       </div>
-<a href="teaching.html" class="navigation navigation-prev navigation-unique" aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
+<a href="research.html" class="navigation navigation-prev navigation-unique" aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
 
     </div>
   </div>
