--- a/me-math-machine.html
+++ b/me-math-machine.html
@@ -21,7 +21,7 @@
   <meta name="twitter:description" content="Personal Website." />
   
 
-<meta name="author" content="Me, Math, Machine | Apurva Nakade" />
+<meta name="author" content="email: “a” + lowercase(lastname) + “@uwo.ca”   CV, Research Statement (outdated)" />
 
 
 
@@ -31,7 +31,7 @@
   
   <link rel="shortcut icon" href="images/sisyphus.svg" type="image/x-icon" />
 <link rel="prev" href="index.html"/>
-<link rel="next" href="math-projects.html"/>
+<link rel="next" href="teaching.html"/>
 <script src="libs/header-attrs-2.3/header-attrs.js"></script>
 <script src="libs/jquery-2.2.3/jquery.min.js"></script>
 <link href="libs/gitbook-2.6.7/css/style.css" rel="stylesheet" />
@@ -53,7 +53,7 @@
 <!-- start header file -->
 <!-- This file gets included in the header of each .html -->
 
-<link href="css/gitbook/normalize.css" rel="stylesheet" />
+<link href="css/gitbook/style.css" rel="stylesheet" />
 <link href="css/gitbook/plugin-table.css" rel="stylesheet" />
 <link href="css/gitbook/plugin-bookdown.css" rel="stylesheet" />
 <link href="css/gitbook/plugin-highlight.css" rel="stylesheet" />
@@ -81,39 +81,33 @@
       <nav role="navigation">
 
 <ul class="summary">
-<li class="chapter" data-level="" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i>Apurva Nakade</a></li>
+<li><a href="index.html#section"></a></li>
 <li class="chapter" data-level="" data-path="me-math-machine.html"><a href="me-math-machine.html"><i class="fa fa-check"></i>Me, Math, Machine</a>
 <ul>
 <li class="chapter" data-level="" data-path="me-math-machine.html"><a href="me-math-machine.html#learning-to-lean"><i class="fa fa-check"></i>Learning to Lean</a></li>
 <li class="chapter" data-level="" data-path="me-math-machine.html"><a href="me-math-machine.html#read-more"><i class="fa fa-check"></i>Read more</a></li>
 </ul></li>
-<li class="chapter" data-level="" data-path="math-projects.html"><a href="math-projects.html"><i class="fa fa-check"></i>Math Projects</a>
-<ul>
-<li class="chapter" data-level="" data-path="math-projects.html"><a href="math-projects.html#current-projects"><i class="fa fa-check"></i>Current Projects</a>
-<ul>
-<li class="chapter" data-level="" data-path="math-projects.html"><a href="math-projects.html#groups-in-equivariant-elliptic-cohomology"><i class="fa fa-check"></i>2-groups in Equivariant Elliptic Cohomology</a></li>
-<li class="chapter" data-level="" data-path="math-projects.html"><a href="math-projects.html#groups-in-hott"><i class="fa fa-check"></i>2-groups in HoTT</a></li>
-<li class="chapter" data-level="" data-path="math-projects.html"><a href="math-projects.html#proof-formalization"><i class="fa fa-check"></i>Proof Formalization</a></li>
-</ul></li>
-<li class="chapter" data-level="" data-path="math-projects.html"><a href="math-projects.html#past-projects"><i class="fa fa-check"></i>Past Projects</a>
-<ul>
-<li class="chapter" data-level="" data-path="math-projects.html"><a href="math-projects.html#an-application-of-the-h-principle-to-manifold-calculus."><i class="fa fa-check"></i>An application of the h-principle to Manifold Calculus.</a></li>
-<li class="chapter" data-level="" data-path="math-projects.html"><a href="math-projects.html#protein-folding-using-markov-chains"><i class="fa fa-check"></i>Protein folding using Markov chains</a></li>
-<li class="chapter" data-level="" data-path="math-projects.html"><a href="math-projects.html#projects-that-did-not-quite-work-out"><i class="fa fa-check"></i>Projects that did not quite work out</a></li>
-</ul></li>
-</ul></li>
 <li class="chapter" data-level="" data-path="teaching.html"><a href="teaching.html"><i class="fa fa-check"></i>Teaching</a>
 <ul>
 <li class="chapter" data-level="" data-path="teaching.html"><a href="teaching.html#directed-reading-program"><i class="fa fa-check"></i>Directed Reading Program</a></li>
-<li class="chapter" data-level="" data-path="teaching.html"><a href="teaching.html#canadausa-mathcamp"><i class="fa fa-check"></i>Canada/USA Mathcamp</a>
-<ul>
-<li><a href="teaching.html#canadausa-mathcamp-20202020"><span><img src="images/mathcamp-icon.png" alt="Canada/USA Mathcamp" /> 2020</span></a></li>
-<li><a href="teaching.html#canadausa-mathcamp-20192019"><span><img src="images/mathcamp-icon.png" alt="Canada/USA Mathcamp" /> 2019</span></a></li>
-<li><a href="teaching.html#canadausa-mathcamp-20182018"><span><img src="images/mathcamp-icon.png" alt="Canada/USA Mathcamp" /> 2018</span></a></li>
-<li><a href="teaching.html#canadausa-mathcamp-20172017"><span><img src="images/mathcamp-icon.png" alt="Canada/USA Mathcamp" /> 2017</span></a></li>
-</ul></li>
+<li class="chapter" data-level="" data-path="teaching.html"><a href="teaching.html#canadausa-mathcamp"><i class="fa fa-check"></i>Canada/USA Mathcamp</a></li>
 <li class="chapter" data-level="" data-path="teaching.html"><a href="teaching.html#johns-hopkins-university"><i class="fa fa-check"></i>Johns Hopkins University</a></li>
 <li class="chapter" data-level="" data-path="teaching.html"><a href="teaching.html#expository-notes"><i class="fa fa-check"></i>Expository Notes</a></li>
+</ul></li>
+<li class="chapter" data-level="" data-path="research.html"><a href="research.html"><i class="fa fa-check"></i>Research</a>
+<ul>
+<li class="chapter" data-level="" data-path="research.html"><a href="research.html#current-projects"><i class="fa fa-check"></i>Current Projects</a>
+<ul>
+<li class="chapter" data-level="" data-path="research.html"><a href="research.html#groups-in-equivariant-elliptic-cohomology"><i class="fa fa-check"></i>2-groups in Equivariant Elliptic Cohomology</a></li>
+<li class="chapter" data-level="" data-path="research.html"><a href="research.html#groups-in-hott"><i class="fa fa-check"></i>2-groups in HoTT</a></li>
+<li class="chapter" data-level="" data-path="research.html"><a href="research.html#proof-formalization"><i class="fa fa-check"></i>Proof Formalization</a></li>
+</ul></li>
+<li class="chapter" data-level="" data-path="research.html"><a href="research.html#past-projects"><i class="fa fa-check"></i>Past Projects</a>
+<ul>
+<li class="chapter" data-level="" data-path="research.html"><a href="research.html#an-application-of-the-h-principle-to-manifold-calculus."><i class="fa fa-check"></i>An application of the h-principle to Manifold Calculus.</a></li>
+<li class="chapter" data-level="" data-path="research.html"><a href="research.html#protein-folding-using-markov-chains"><i class="fa fa-check"></i>Protein folding using Markov chains</a></li>
+<li class="chapter" data-level="" data-path="research.html"><a href="research.html#projects-that-did-not-quite-work-out"><i class="fa fa-check"></i>Projects that did not quite work out</a></li>
+</ul></li>
 </ul></li>
 <li class="chapter" data-level="" data-path="etc-.html"><a href="etc-.html"><i class="fa fa-check"></i>Etc.</a></li>
 <li class="divider"></li>
@@ -138,26 +132,21 @@
             <section class="normal" id="section-">
 <div id="me-math-machine" class="section level1">
 <h1>Me, Math, Machine</h1>
-<p><a href="https://en.wikipedia.org/wiki/Lean_(proof_assistant)"><img src="https://leanprover.github.io/images/lean_logo.svg" width="200px" class="right" /></a></p>
-<p>I have recently gotten interesting in teaching math to computers.
-This is different from doing computations as here we are trying to teach math to computers the same way we understand it.</p>
-<p>The software I use for this is <a href="https://leanprover.github.io/about/">Lean</a>.
+<p>I have recently gotten interesting in teaching math to computers using <a href="https://leanprover.github.io/about/">Lean</a>.
+This is different from doing computations as here we are trying to teach math to computers the same way we understand it.
+<a href="courses/lean_at_MC2020/index.html"><img src="https://leanprover.github.io/images/lean_logo2.svg" width="70%" style="display:block; margin:auto" /></a>
 <a href="https://leanprover.github.io/live/latest/">Lean</a> is an open-source software that understands mathematics and can check correctness of proofs.
-It was developed my computer scientists at Microsoft Research but has since been overtaken my mathematicians who now form the <a href="https://leanprover-community.github.io/">leanprover-community</a> and maintain the rapidly growing <a href="https://github.com/leanprover-community/mathlib/">mathlib library</a>.</p>
+It was developed my computer scientists at Microsoft Research but has since been overtaken my mathematicians who now form the <a href="https://leanprover-community.github.io/">leanprover-community</a> and maintain its rapidly growing <a href="https://github.com/leanprover-community/mathlib/">math library</a>.</p>
 <p>My primary interest in Lean is as a potential tool for teaching math proofs.
-When it comes to learning to write proofs, the biggest hurdle is the lack of immediate feedback.
-Even well meaning students often find it difficult to spot logical errors in their proofs.
-I strongly believe that having a software that can pinpoint errors in proofs will effectively solve this problem.</p>
-<p>My secondary interest lies in combining machine learning and theorem proving.
-<a href="https://github.com/metamath/set.mm/wiki/Automated-proving">Some progress</a> is already being made on this front for a more basic theorem prover called <a href="http://us.metamath.org/">Metamath</a>.</p>
-<p>These are very long term goals as the field of theorem proving, although rapidly growing, is still very nascent.
-Currently, I try to teach Lean to students and am working on developing and expanding the Linear Algebra component of Lean’s math library.</p>
+My secondary interest lies in combining machine learning and theorem proving.
+<!-- [Some progress](https://github.com/metamath/set.mm/wiki/Automated-proving) is already being made on this front for a more basic theorem prover called [Metamath](http://us.metamath.org/).  -->
+These are very long term goals as the field of theorem proving, although rapidly growing, is still very nascent.
+Currently, I try to teach Lean to students and am working on contributing to Lean’s math library.</p>
 <div id="learning-to-lean" class="section level2">
 <h2>Learning to Lean</h2>
 <p>Lean is accessible to anyone who understands basic theorem proving in math.
 You can find several learning resources <a href="https://leanprover-community.github.io/learn.html">here</a>.
-I personally learned Lean by playing the <a href="https://wwwf.imperial.ac.uk/~buzzard/xena/natural_number_game/">Natural numbers game</a>, reading <a href="https://leanprover.github.io/theorem_proving_in_lean/introduction.html">Theorem Proving in Lean</a>, and banging my head against the wall while solving some problems on <a href="https://www.codewars.com/kata/search/lean">Codewars</a>.</p>
-<p>However, online resources are not enough for learning the language as there are far too many subtle, technical difficulties that arise in practice.
+I personally learned Lean by playing the <a href="https://wwwf.imperial.ac.uk/~buzzard/xena/natural_number_game/">Natural numbers game</a>, reading <a href="https://leanprover.github.io/theorem_proving_in_lean/introduction.html">Theorem Proving in Lean</a>, and banging my head against the wall while solving some problems on <a href="https://www.codewars.com/kata/search/lean">Codewars</a>. However, online resources are not enough for learning the language.
 There is a very helpful and supportive Lean community on <a href="https://leanprover.zulipchat.com/">zulipchat</a> where you can ask questions and get help to your heart’s content.</p>
 <p>The best way to learn is by teaching.
 And so, I taught a course <a href="courses/lean_at_MC2020/index.html">Lean at MC2020</a> at Mathcamp 2020 where we taught Lean the proof of irrationality of <span class="math inline">\(\sqrt{2}\)</span>.</p>
@@ -170,7 +159,7 @@ And so, I taught a course <a href="courses/lean_at_MC2020/index.html">Lean at MC
 <li><a href="https://leanprover-community.github.io/sphere-eversion/blueprint/sect0001.html">The sphere eversion project</a></li>
 <li><a href="https://github.com/TwoFX/sudoku">Sudoku in Lean</a></li>
 </ul>
-<p>If you wish to learn some Lean or already know Lean and would like to discuss/do a project, feel free to email with me.</p>
+<p>If you wish to learn some Lean or already know Lean and would like to discuss/do a project, feel free to get in touch.</p>
 
 </div>
 </div>
@@ -180,7 +169,7 @@ And so, I taught a course <a href="courses/lean_at_MC2020/index.html">Lean at MC
         </div>
       </div>
 <a href="index.html" class="navigation navigation-prev " aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
-<a href="math-projects.html" class="navigation navigation-next " aria-label="Next page"><i class="fa fa-angle-right"></i></a>
+<a href="teaching.html" class="navigation navigation-next " aria-label="Next page"><i class="fa fa-angle-right"></i></a>
     </div>
   </div>
 <script src="libs/gitbook-2.6.7/js/app.min.js"></script>
