--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <meta name="twitter:description" content="Personal Website." />
   
 
-<meta name="author" content="Apurva Nakade" />
+<meta name="author" content="email: “a” + lowercase(lastname) + “@uwo.ca”   CV, Research Statement (outdated)" />
 
 
 
@@ -53,7 +53,7 @@
 <!-- start header file -->
 <!-- This file gets included in the header of each .html -->
 
-<link href="css/gitbook/normalize.css" rel="stylesheet" />
+<link href="css/gitbook/style.css" rel="stylesheet" />
 <link href="css/gitbook/plugin-table.css" rel="stylesheet" />
 <link href="css/gitbook/plugin-bookdown.css" rel="stylesheet" />
 <link href="css/gitbook/plugin-highlight.css" rel="stylesheet" />
@@ -81,39 +81,33 @@
       <nav role="navigation">
 
 <ul class="summary">
-<li class="chapter" data-level="" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i>Apurva Nakade</a></li>
+<li><a href="index.html#section"></a></li>
 <li class="chapter" data-level="" data-path="me-math-machine.html"><a href="me-math-machine.html"><i class="fa fa-check"></i>Me, Math, Machine</a>
 <ul>
 <li class="chapter" data-level="" data-path="me-math-machine.html"><a href="me-math-machine.html#learning-to-lean"><i class="fa fa-check"></i>Learning to Lean</a></li>
 <li class="chapter" data-level="" data-path="me-math-machine.html"><a href="me-math-machine.html#read-more"><i class="fa fa-check"></i>Read more</a></li>
 </ul></li>
-<li class="chapter" data-level="" data-path="math-projects.html"><a href="math-projects.html"><i class="fa fa-check"></i>Math Projects</a>
-<ul>
-<li class="chapter" data-level="" data-path="math-projects.html"><a href="math-projects.html#current-projects"><i class="fa fa-check"></i>Current Projects</a>
-<ul>
-<li class="chapter" data-level="" data-path="math-projects.html"><a href="math-projects.html#groups-in-equivariant-elliptic-cohomology"><i class="fa fa-check"></i>2-groups in Equivariant Elliptic Cohomology</a></li>
-<li class="chapter" data-level="" data-path="math-projects.html"><a href="math-projects.html#groups-in-hott"><i class="fa fa-check"></i>2-groups in HoTT</a></li>
-<li class="chapter" data-level="" data-path="math-projects.html"><a href="math-projects.html#proof-formalization"><i class="fa fa-check"></i>Proof Formalization</a></li>
-</ul></li>
-<li class="chapter" data-level="" data-path="math-projects.html"><a href="math-projects.html#past-projects"><i class="fa fa-check"></i>Past Projects</a>
-<ul>
-<li class="chapter" data-level="" data-path="math-projects.html"><a href="math-projects.html#an-application-of-the-h-principle-to-manifold-calculus."><i class="fa fa-check"></i>An application of the h-principle to Manifold Calculus.</a></li>
-<li class="chapter" data-level="" data-path="math-projects.html"><a href="math-projects.html#protein-folding-using-markov-chains"><i class="fa fa-check"></i>Protein folding using Markov chains</a></li>
-<li class="chapter" data-level="" data-path="math-projects.html"><a href="math-projects.html#projects-that-did-not-quite-work-out"><i class="fa fa-check"></i>Projects that did not quite work out</a></li>
-</ul></li>
-</ul></li>
 <li class="chapter" data-level="" data-path="teaching.html"><a href="teaching.html"><i class="fa fa-check"></i>Teaching</a>
 <ul>
 <li class="chapter" data-level="" data-path="teaching.html"><a href="teaching.html#directed-reading-program"><i class="fa fa-check"></i>Directed Reading Program</a></li>
-<li class="chapter" data-level="" data-path="teaching.html"><a href="teaching.html#canadausa-mathcamp"><i class="fa fa-check"></i>Canada/USA Mathcamp</a>
-<ul>
-<li><a href="teaching.html#canadausa-mathcamp-20202020"><span><img src="images/mathcamp-icon.png" alt="Canada/USA Mathcamp" /> 2020</span></a></li>
-<li><a href="teaching.html#canadausa-mathcamp-20192019"><span><img src="images/mathcamp-icon.png" alt="Canada/USA Mathcamp" /> 2019</span></a></li>
-<li><a href="teaching.html#canadausa-mathcamp-20182018"><span><img src="images/mathcamp-icon.png" alt="Canada/USA Mathcamp" /> 2018</span></a></li>
-<li><a href="teaching.html#canadausa-mathcamp-20172017"><span><img src="images/mathcamp-icon.png" alt="Canada/USA Mathcamp" /> 2017</span></a></li>
-</ul></li>
+<li class="chapter" data-level="" data-path="teaching.html"><a href="teaching.html#canadausa-mathcamp"><i class="fa fa-check"></i>Canada/USA Mathcamp</a></li>
 <li class="chapter" data-level="" data-path="teaching.html"><a href="teaching.html#johns-hopkins-university"><i class="fa fa-check"></i>Johns Hopkins University</a></li>
 <li class="chapter" data-level="" data-path="teaching.html"><a href="teaching.html#expository-notes"><i class="fa fa-check"></i>Expository Notes</a></li>
+</ul></li>
+<li class="chapter" data-level="" data-path="research.html"><a href="research.html"><i class="fa fa-check"></i>Research</a>
+<ul>
+<li class="chapter" data-level="" data-path="research.html"><a href="research.html#current-projects"><i class="fa fa-check"></i>Current Projects</a>
+<ul>
+<li class="chapter" data-level="" data-path="research.html"><a href="research.html#groups-in-equivariant-elliptic-cohomology"><i class="fa fa-check"></i>2-groups in Equivariant Elliptic Cohomology</a></li>
+<li class="chapter" data-level="" data-path="research.html"><a href="research.html#groups-in-hott"><i class="fa fa-check"></i>2-groups in HoTT</a></li>
+<li class="chapter" data-level="" data-path="research.html"><a href="research.html#proof-formalization"><i class="fa fa-check"></i>Proof Formalization</a></li>
+</ul></li>
+<li class="chapter" data-level="" data-path="research.html"><a href="research.html#past-projects"><i class="fa fa-check"></i>Past Projects</a>
+<ul>
+<li class="chapter" data-level="" data-path="research.html"><a href="research.html#an-application-of-the-h-principle-to-manifold-calculus."><i class="fa fa-check"></i>An application of the h-principle to Manifold Calculus.</a></li>
+<li class="chapter" data-level="" data-path="research.html"><a href="research.html#protein-folding-using-markov-chains"><i class="fa fa-check"></i>Protein folding using Markov chains</a></li>
+<li class="chapter" data-level="" data-path="research.html"><a href="research.html#projects-that-did-not-quite-work-out"><i class="fa fa-check"></i>Projects that did not quite work out</a></li>
+</ul></li>
 </ul></li>
 <li class="chapter" data-level="" data-path="etc-.html"><a href="etc-.html"><i class="fa fa-check"></i>Etc.</a></li>
 <li class="divider"></li>
@@ -138,44 +132,17 @@
             <section class="normal" id="section-">
 <div id="header">
 <h1 class="title">Apurva Nakade</h1>
-<p class="author"><em>Apurva Nakade</em></p>
+<p class="author"><em>email: “a” + lowercase(lastname) + “<span class="citation">@uwo.ca</span>” <br /> <a href="https://drive.google.com/file/d/1CZJ4_A2ssI0-V_HszcPoEJyQC1EY2s5u/view?usp=sharing">CV</a>, <a href="https://drive.google.com/file/d/15HeOJjr6BuuxA0ZNCwSYeHpB2d5Z2sci/view?usp=sharing">Research Statement</a> (outdated)</em></p>
 </div>
-<div id="apurva-nakade" class="section level1">
-<h1>Apurva Nakade</h1>
-<p><img src="images/me0.jpg" width="200px" class="right" /></p>
-<p>I'm a postdoc in the <a href="http://www.math.uwo.ca/">Department of Mathematics</a> at the University of
-Western Ontario working with <a href="https://jdc.math.uwo.ca/">Dan Christensen</a> and <a href="http://www.math.uwo.ca/faculty/kapulkin/">Chris Kapulkin</a>.</p>
-<p>In the Fall of 2020, I'll be teaching Math 2151A (Discrete Math for Engineers).</p>
-<p>I work in the area of algebraic topology and homotopy theory. My broad
-interests are in understanding how homotopy theoretic tools can be used
-to solve problems from other areas of math.</p>
-<p>While learning homotopy type
-theory, I came across the <a href="https://leanprover-community.github.io/">Lean theorem prover</a> and have since gotten
-obsessed with it.</p>
-<p>I am interested in improving math education. I want to
-modernize math education and bring it to the 21st century through the
-use of new technological innovations in teaching and in the process make
-it more accessible and equitable.</p>
-<table>
-<tbody>
-<tr class="odd">
-<td>Email</td>
-<td>“a” + lowercase(lastname) + “<span class="citation">@uwo.ca</span>”</td>
-</tr>
-<tr class="even">
-<td>Office Hours</td>
-<td>all the time</td>
-</tr>
-<tr class="odd">
-<td>Job Stuff</td>
-<td><a href="https://drive.google.com/file/d/1CZJ4_A2ssI0-V_HszcPoEJyQC1EY2s5u/view?usp=sharing">ceeeeEEEEEVVVVVeeeee</a></td>
-</tr>
-<tr class="even">
-<td></td>
-<td><a href="https://drive.google.com/file/d/15HeOJjr6BuuxA0ZNCwSYeHpB2d5Z2sci/view?usp=sharing">Research Statement</a></td>
-</tr>
-</tbody>
-</table>
+<div id="section" class="section level1 unnumbered">
+<h1 class="unnumbered"></h1>
+<p><img src="images/me0.jpg" width="200px" class="left" /></p>
+<p>I'm a postdoc at the <a href="http://www.math.uwo.ca/">University of Western Ontario</a> working with <a href="https://jdc.math.uwo.ca/">Dan Christensen</a> and <a href="http://www.math.uwo.ca/faculty/kapulkin/">Chris Kapulkin</a>.
+I do research in algebraic topology and homotopy theory.</p>
+<p>In addition to research, I am very passionate about improving math education. I want to
+modernize math-ed and bring it to the 21st century through the use of new technological innovations
+in teaching and in the process make it more accessible and equitable.</p>
+<p>I'm currently teaching <a href="https://owl.uwo.ca/portal/site/5a31b856-d356-4278-9a3a-1dfebc96e873">Math 2151A (Discrete Math for Engineers)</a>.</p>
 
 </div>
             </section>
