--- a/etc-.html
+++ b/etc-.html
@@ -21,7 +21,7 @@
   <meta name="twitter:description" content="Personal Website." />
   
 
-<meta name="author" content="email: “a” + lowercase(lastname) + “@uwo.ca”   CV, Research Statement (outdated)" />
+<meta name="author" content="email: (left as an exercise to the reader)   CV, Research Statement" />
 
 
 
@@ -32,7 +32,6 @@
   <link rel="shortcut icon" href="images/sisyphus.svg" type="image/x-icon" />
 <link rel="prev" href="research.html"/>
 
-<script src="libs/header-attrs-2.3/header-attrs.js"></script>
 <script src="libs/jquery-2.2.3/jquery.min.js"></script>
 <link href="libs/gitbook-2.6.7/css/style.css" rel="stylesheet" />
 <link href="libs/gitbook-2.6.7/css/plugin-table.css" rel="stylesheet" />
@@ -82,28 +81,23 @@
 
 <ul class="summary">
 <li><a href="index.html#section"></a></li>
-<li class="chapter" data-level="" data-path="me-math-machine.html"><a href="me-math-machine.html"><i class="fa fa-check"></i>Me, Math, Machine</a>
-<ul>
+<li class="chapter" data-level="" data-path="me-math-machine.html"><a href="me-math-machine.html"><i class="fa fa-check"></i>Me, Math, Machine</a><ul>
 <li class="chapter" data-level="" data-path="me-math-machine.html"><a href="me-math-machine.html#learning-to-lean"><i class="fa fa-check"></i>Learning to Lean</a></li>
 <li class="chapter" data-level="" data-path="me-math-machine.html"><a href="me-math-machine.html#read-more"><i class="fa fa-check"></i>Read more</a></li>
 </ul></li>
-<li class="chapter" data-level="" data-path="teaching.html"><a href="teaching.html"><i class="fa fa-check"></i>Teaching</a>
-<ul>
+<li class="chapter" data-level="" data-path="teaching.html"><a href="teaching.html"><i class="fa fa-check"></i>Teaching</a><ul>
 <li class="chapter" data-level="" data-path="teaching.html"><a href="teaching.html#directed-reading-program"><i class="fa fa-check"></i>Directed Reading Program</a></li>
 <li class="chapter" data-level="" data-path="teaching.html"><a href="teaching.html#canadausa-mathcamp"><i class="fa fa-check"></i>Canada/USA Mathcamp</a></li>
-<li class="chapter" data-level="" data-path="teaching.html"><a href="teaching.html#johns-hopkins-university"><i class="fa fa-check"></i>Johns Hopkins University</a></li>
+<li class="chapter" data-level="" data-path="teaching.html"><a href="teaching.html#johns-hopkins"><i class="fa fa-check"></i>Johns Hopkins</a></li>
 <li class="chapter" data-level="" data-path="teaching.html"><a href="teaching.html#expository-notes"><i class="fa fa-check"></i>Expository Notes</a></li>
 </ul></li>
-<li class="chapter" data-level="" data-path="research.html"><a href="research.html"><i class="fa fa-check"></i>Research</a>
-<ul>
-<li class="chapter" data-level="" data-path="research.html"><a href="research.html#current-projects"><i class="fa fa-check"></i>Current Projects</a>
-<ul>
+<li class="chapter" data-level="" data-path="research.html"><a href="research.html"><i class="fa fa-check"></i>Research</a><ul>
+<li class="chapter" data-level="" data-path="research.html"><a href="research.html#current-projects"><i class="fa fa-check"></i>Current Projects</a><ul>
 <li class="chapter" data-level="" data-path="research.html"><a href="research.html#groups-in-equivariant-elliptic-cohomology"><i class="fa fa-check"></i>2-groups in Equivariant Elliptic Cohomology</a></li>
 <li class="chapter" data-level="" data-path="research.html"><a href="research.html#groups-in-hott"><i class="fa fa-check"></i>2-groups in HoTT</a></li>
 <li class="chapter" data-level="" data-path="research.html"><a href="research.html#proof-formalization"><i class="fa fa-check"></i>Proof Formalization</a></li>
 </ul></li>
-<li class="chapter" data-level="" data-path="research.html"><a href="research.html#past-projects"><i class="fa fa-check"></i>Past Projects</a>
-<ul>
+<li class="chapter" data-level="" data-path="research.html"><a href="research.html#past-projects"><i class="fa fa-check"></i>Past Projects</a><ul>
 <li class="chapter" data-level="" data-path="research.html"><a href="research.html#an-application-of-the-h-principle-to-manifold-calculus."><i class="fa fa-check"></i>An application of the h-principle to Manifold Calculus.</a></li>
 <li class="chapter" data-level="" data-path="research.html"><a href="research.html#protein-folding-using-markov-chains"><i class="fa fa-check"></i>Protein folding using Markov chains</a></li>
 <li class="chapter" data-level="" data-path="research.html"><a href="research.html#projects-that-did-not-quite-work-out"><i class="fa fa-check"></i>Projects that did not quite work out</a></li>
