--- a/etc-.html
+++ b/etc-.html
@@ -127,11 +127,16 @@
 <div id="etc." class="section level1">
 <h1>Etc.</h1>
 <p><a href="https://www.gocomics.com/sarahs-scribbles/2014/1/17"><img src="images/books.gif" width="250px" class="right" /></a></p>
-<p>Fun for me is <a href="./blog/art/books/index.html">reading books</a> and writing on <a href="./blog">my blog</a> about random
-things. I love to <a href="https://drive.google.com/open?id=1wpCR64gzKc7Zp8V-FIn43ANMA6QULjMS&amp;usp=sharing">travel</a>. I type in <a href="https://en.wikipedia.org/wiki/Dvorak_Simplified_Keyboard">dvorak</a>.</p>
-<p>I love designing websites like this one (built using <a href="https://bookdown.org/">bookdown</a>) and <a href="https://github.com/apurvnakade/HugoTheme">my blog's theme</a>
-(built using <a href="https://gohugo.io/">Hugo</a>). I have also started a couple of wikis for dumping <a href="https://www.notion.so/Math-Wiki-01783c0807aa4fa18d7d28a7f724fcde">math-ed
-resources</a> and <a href="https://www.notion.so/Wiki-1b656cca9c964d79b932d4c76cc8ed7d">computer hacks</a>.</p>
+<p>Fun for me is <a href="./blog/art/books/index.html">reading books</a>. I love to <a href="https://drive.google.com/open?id=1wpCR64gzKc7Zp8V-FIn43ANMA6QULjMS&amp;usp=sharing">travel</a>. I type in <a href="https://en.wikipedia.org/wiki/Dvorak_Simplified_Keyboard">dvorak</a>.
+I love designing websites like this one (built using <a href="https://bookdown.org/">bookdown</a>), <a href="https://github.com/apurvnakade/HugoTheme">my blog's theme</a>
+(built using <a href="https://gohugo.io/">Hugo</a>), and the <a href="http://www.math.jhu.edu/drp.html">JHU DRP website</a>.</p>
+<p>I maintain several blogs and wikis:</p>
+<ul>
+<li><a href="./blog">Personal blog</a></li>
+<li><a href="https://notleftasanexercise.wordpress.com/">Blog about teaching</a></li>
+<li><a href="https://www.notion.so/Wiki-1b656cca9c964d79b932d4c76cc8ed7d">Wiki for dumping computer hacks</a></li>
+<li><a href="https://www.notion.so/Math-Wiki-01783c0807aa4fa18d7d28a7f724fcde">Wiki for dumping math-ed resources</a></li>
+</ul>
 <p>In a past life I was involved with and highly recommend the following:</p>
 <ul>
 <li>London, ON
