add course webpage links

--- a/teaching.html
+++ b/teaching.html
@@ -155,8 +155,8 @@ Among other things, I have been designing and teaching some fun courses there an
 Following are notes from some of the courses I’ve taught and projects I’ve done with mathcampers.</p>
 <table>
 <colgroup>
-<col width="42%" />
-<col width="57%" />
+<col width="52%" />
+<col width="47%" />
 </colgroup>
 <tbody>
 <tr class="odd">
@@ -176,7 +176,7 @@ Following are notes from some of the courses I’ve taught and projects I’ve d
 <td><a href="https://drive.google.com/file/d/1lnX4p_K75vMl0rt0JtOeTYPm9eA6Zi2j/view?usp=sharing">Crash Course on Linear Algebra</a></td>
 </tr>
 <tr class="odd">
-<td><a href="https://drive.google.com/drive/folders/16o9Slgd4YvhjUCEp_BHSc-xf-2ubKHlo?usp=sharing">Riemann Surfaces</a></td>
+<td><a href="courses/Mathcamp/2019_riemann_surfaces/index.html">Riemann Surfaces</a></td>
 <td><a href="https://drive.google.com/file/d/1yMpw52rjMrBRj5q8W2PIDRDp9yXmDYVN/view?usp=sharing">Galois Correspondence of Covering Spaces</a></td>
 </tr>
 <tr class="even">
@@ -189,7 +189,7 @@ Following are notes from some of the courses I’ve taught and projects I’ve d
 </tr>
 <tr class="even">
 <td><a href="https://drive.google.com/file/d/1QSPZ5WpFDLCa1AzFrJiE57NXRhwRo8Ra/view?usp=sharing">Would I ever Lie Group to you?</a></td>
-<td><a href="https://drive.google.com/drive/folders/1zZ49l7ZrmVfg4Lrt7iiCZrk3YH_kVVSg?usp=sharing">How Curved Is a Potato?</a></td>
+<td><a href="courses/Mathcamp/2018_how_curved_is_a_potato/index.html">How Curved Is a Potato?</a></td>
 </tr>
 <tr class="odd">
 <td><a href="https://www.mathcamp.org/2017/index.php"><img src="images/mathcamp-icon.png" alt="Canada/USA Mathcamp" /> 2017</a></td>
@@ -228,11 +228,11 @@ Following are notes from some of the courses I’ve taught and projects I’ve d
 <tbody>
 <tr class="odd">
 <td><a href="https://drive.google.com/file/d/1dChuk8J7s31C8xGurzsbf988VORnyXgb/view?usp=sharing">Symmetries &amp; Polynomials '18 (IBL)</a></td>
-<td><a href="https://drive.google.com/drive/folders/1UmhBnhqXzL1b9kb1zn-7qkYgSSW-Gmwz?usp=sharing">H2G2 Algebraic Topology '17</a></td>
+<td><a href="courses/2017_h2g2_alg_top/index.html">H2G2 Algebraic Topology '17</a></td>
 </tr>
 <tr class="even">
-<td><a href="https://drive.google.com/drive/folders/1xF37VjqpQfSI9W5PmrK19bp8OybGmmpW?usp=sharing">Honors Single Variable Calculus '18 (IBL)</a></td>
-<td><a href="https://drive.google.com/drive/folders/16gJLOf0L6RJ09yRL_b7AozVyq3wHsTMG?usp=sharing">Honors Single Variable Calculus '17 (IBL)</a></td>
+<td><a href="courses/2018_Honors_Calc/index.html">Honors Single Variable Calculus '18 (IBL)</a></td>
+<td><a href="courses/2017_Honors_Calc/index.html">Honors Single Variable Calculus '17 (IBL)</a></td>
 </tr>
 </tbody>
 </table>
@@ -266,16 +266,16 @@ They have not been proofread and are likely to contain several mistakes, viewer 
 <td><a href="https://drive.google.com/drive/folders/12tMk47gvY0B8cL0LmtRxLMcrVudd73y-?usp=sharing">Infinity Categories</a></td>
 </tr>
 <tr class="odd">
-<td><strong>Symplectic Topology</strong></td>
+<td><strong>Mathematical Physics</strong></td>
 <td><a href="https://drive.google.com/file/d/1uecVJP6Xl1vScsswWGqBtJ1s3o9PwG8C/view?usp=sharing">h-principles MSRI Summer School</a></td>
 </tr>
 <tr class="even">
-<td><a href="https://drive.google.com/drive/folders/1NJllhRgGV5uMSg3hfbp2wcJgScIwhhSZ?usp=sharing">Symplectic Geometry</a></td>
+<td><a href="https://drive.google.com/file/d/1YbjFhmTt6yvCdxyb4nT7aVz9g4w0E-PN/view?usp=sharing">Symplectic Geometry</a></td>
 <td><a href="https://drive.google.com/drive/folders/19GanFw6odpL4tRUJa-mPsVmVKcK52jaW?usp=sharing">Geometry of Dirac Operators</a></td>
 </tr>
 <tr class="odd">
 <td><a href="https://drive.google.com/drive/folders/1OyE4ADuxnFIJ3-wuEifCNYWcCF2-iiRd?usp=sharing">Finite Group Gauge Theory</a></td>
-<td><a href="https://drive.google.com/drive/folders/1lkx7z7ht5XuRAhhKnhVgLiPHJ2GLSrT3?usp=sharing">FIOs and Lagrangian Submanifolds</a></td>
+<td><a href="https://drive.google.com/file/d/1jrV_2VjR1xGa6eham0FIxiVvMngsF8Xs/view?usp=sharing">FIOs and Lagrangian Submanifolds</a></td>
 </tr>
 <tr class="even">
 <td><a href="https://drive.google.com/file/d/15SwA8TDmLUMElPQYvhMcIAttXgNzuKbz/view?usp=sharing">Classical Lie Groups</a></td>
