--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ I do research in algebraic topology and homotopy theory.</p>
 <p>In addition to research, I am very passionate about improving math education. I want to
 modernize math-ed and bring it to the 21st century through the use of new technological innovations
 in teaching and in the process make it more accessible and equitable.</p>
-<p>I'm currently teaching <a href="https://owl.uwo.ca/portal/site/5a31b856-d356-4278-9a3a-1dfebc96e873">Math 2151A (Discrete Math for Engineers)</a>.</p>
+<p>Things that keep me busy these days: teaching <a href="https://owl.uwo.ca/portal/site/5a31b856-d356-4278-9a3a-1dfebc96e873">Math 2151A (Discrete Math for Engineers)</a>, making <a href="https://www.youtube.com/playlist?list=PLXAOfwfSuiKm3cL-JftD9ndrjYi7fPcqN">video lectures</a>, organizing the <a href="https://www.math.uwo.ca/undergraduate/directed_reading_program.html">DRP</a>, applying for jobs.</p>
 
 </div>
             </section>
