--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
   <link rel="shortcut icon" href="images/sisyphus.svg" type="image/x-icon" />
 
 <link rel="next" href="me-math-machine.html"/>
+<script src="libs/header-attrs-2.3/header-attrs.js"></script>
 <script src="libs/jquery-2.2.3/jquery.min.js"></script>
 <link href="libs/gitbook-2.6.7/css/style.css" rel="stylesheet" />
 <link href="libs/gitbook-2.6.7/css/plugin-table.css" rel="stylesheet" />
@@ -80,24 +81,29 @@
       <nav role="navigation">
 
 <ul class="summary">
-<li><a href="index.html#section"></a></li>
-<li class="chapter" data-level="" data-path="me-math-machine.html"><a href="me-math-machine.html"><i class="fa fa-check"></i>Me, Math, Machine</a><ul>
+<li class="chapter" data-level="" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i>Apurva Nakade</a></li>
+<li class="chapter" data-level="" data-path="me-math-machine.html"><a href="me-math-machine.html"><i class="fa fa-check"></i>Me, Math, Machine</a>
+<ul>
 <li class="chapter" data-level="" data-path="me-math-machine.html"><a href="me-math-machine.html#learning-to-lean"><i class="fa fa-check"></i>Learning to Lean</a></li>
 <li class="chapter" data-level="" data-path="me-math-machine.html"><a href="me-math-machine.html#read-more"><i class="fa fa-check"></i>Read more</a></li>
 </ul></li>
-<li class="chapter" data-level="" data-path="teaching.html"><a href="teaching.html"><i class="fa fa-check"></i>Teaching</a><ul>
+<li class="chapter" data-level="" data-path="teaching.html"><a href="teaching.html"><i class="fa fa-check"></i>Teaching</a>
+<ul>
 <li class="chapter" data-level="" data-path="teaching.html"><a href="teaching.html#directed-reading-program"><i class="fa fa-check"></i>Directed Reading Program</a></li>
 <li class="chapter" data-level="" data-path="teaching.html"><a href="teaching.html#canadausa-mathcamp"><i class="fa fa-check"></i>Canada/USA Mathcamp</a></li>
 <li class="chapter" data-level="" data-path="teaching.html"><a href="teaching.html#johns-hopkins"><i class="fa fa-check"></i>Johns Hopkins</a></li>
 <li class="chapter" data-level="" data-path="teaching.html"><a href="teaching.html#expository-notes"><i class="fa fa-check"></i>Expository Notes</a></li>
 </ul></li>
-<li class="chapter" data-level="" data-path="research.html"><a href="research.html"><i class="fa fa-check"></i>Research</a><ul>
-<li class="chapter" data-level="" data-path="research.html"><a href="research.html#current-projects"><i class="fa fa-check"></i>Current Projects</a><ul>
+<li class="chapter" data-level="" data-path="research.html"><a href="research.html"><i class="fa fa-check"></i>Research</a>
+<ul>
+<li class="chapter" data-level="" data-path="research.html"><a href="research.html#current-projects"><i class="fa fa-check"></i>Current Projects</a>
+<ul>
 <li class="chapter" data-level="" data-path="research.html"><a href="research.html#groups-in-equivariant-elliptic-cohomology"><i class="fa fa-check"></i>2-groups in Equivariant Elliptic Cohomology</a></li>
 <li class="chapter" data-level="" data-path="research.html"><a href="research.html#groups-in-hott"><i class="fa fa-check"></i>2-groups in HoTT</a></li>
 <li class="chapter" data-level="" data-path="research.html"><a href="research.html#proof-formalization"><i class="fa fa-check"></i>Proof Formalization</a></li>
 </ul></li>
-<li class="chapter" data-level="" data-path="research.html"><a href="research.html#past-projects"><i class="fa fa-check"></i>Past Projects</a><ul>
+<li class="chapter" data-level="" data-path="research.html"><a href="research.html#past-projects"><i class="fa fa-check"></i>Past Projects</a>
+<ul>
 <li class="chapter" data-level="" data-path="research.html"><a href="research.html#an-application-of-the-h-principle-to-manifold-calculus."><i class="fa fa-check"></i>An application of the h-principle to Manifold Calculus.</a></li>
 <li class="chapter" data-level="" data-path="research.html"><a href="research.html#protein-folding-using-markov-chains"><i class="fa fa-check"></i>Protein folding using Markov chains</a></li>
 <li class="chapter" data-level="" data-path="research.html"><a href="research.html#projects-that-did-not-quite-work-out"><i class="fa fa-check"></i>Projects that did not quite work out</a></li>
@@ -128,8 +134,8 @@
 <h1 class="title">Apurva Nakade</h1>
 <p class="author"><em>email: <span onmouseover="this.innerHTML=&#39;alastname@uwo.ca&#39;" onmouseout="this.innerHTML=&#39;(left as an exercise to the reader)&#39;">(left as an exercise to the reader)</span> <br /> <a href="https://drive.google.com/file/d/1CZJ4_A2ssI0-V_HszcPoEJyQC1EY2s5u/view?usp=sharing">CV</a>, <a href="https://drive.google.com/file/d/15HeOJjr6BuuxA0ZNCwSYeHpB2d5Z2sci/view?usp=sharing">Research Statement</a></em></p>
 </div>
-<div id="section" class="section level1 unnumbered">
-<h1></h1>
+<div id="apurva-nakade" class="section level1">
+<h1>Apurva Nakade</h1>
 <p><img src="images/me0.jpg" width="200px" class="left" /></p>
 <p>I'm a postdoc at the <a href="http://www.math.uwo.ca/">University of Western Ontario</a> working with <a href="https://jdc.math.uwo.ca/">Dan Christensen</a> and <a href="http://www.math.uwo.ca/faculty/kapulkin/">Chris Kapulkin</a>.
 I do research in algebraic topology and homotopy theory.</p>
