--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <meta name="twitter:description" content="Personal Website." />
   
 
-<meta name="author" content="email: (left as an exercise to the reader)   CV, Research Statement" />
+<meta name="author" content="email: (left as an exercise to the reader)   Academic Info: CV, Research Statement (pdf), Research Statement (video), Teaching Statement, Teaching Dossier" />
 
 
 
@@ -132,17 +132,17 @@
             <section class="normal" id="section-">
 <div id="header">
 <h1 class="title">Apurva Nakade</h1>
-<p class="author"><em>email: <span onmouseover="this.innerHTML=&#39;alastname@uwo.ca&#39;" onmouseout="this.innerHTML=&#39;(left as an exercise to the reader)&#39;">(left as an exercise to the reader)</span> <br /> <a href="https://drive.google.com/file/d/1CZJ4_A2ssI0-V_HszcPoEJyQC1EY2s5u/view?usp=sharing">CV</a>, <a href="https://drive.google.com/file/d/15HeOJjr6BuuxA0ZNCwSYeHpB2d5Z2sci/view?usp=sharing">Research Statement</a></em></p>
+<p class="author"><em>email: <span onmouseover="this.innerHTML=&#39;alastname@uwo.ca&#39;" onmouseout="this.innerHTML=&#39;(left as an exercise to the reader)&#39;">(left as an exercise to the reader)</span> <br /> Academic Info: <a href="https://drive.google.com/file/d/10uLHSlp8ZBvHBC6zXaLsxmSuYq-M59xL/view?usp=sharing">CV</a>, <a href="https://drive.google.com/file/d/15HeOJjr6BuuxA0ZNCwSYeHpB2d5Z2sci/view?usp=sharing">Research Statement (pdf)</a>, <a href="https://youtu.be/rlyzT1PWw5I">Research Statement (video)</a>, <a href="https://drive.google.com/file/d/1ePTk8yzz96OEb7kpJUzF9Du4cc1bK5zE/view?usp=sharing">Teaching Statement</a>, <a href="https://drive.google.com/file/d/1v_ij1QMzXKLxECifXnMILIJlW3DQBNSY/view?usp=sharing">Teaching Dossier</a></em></p>
 </div>
 <div id="apurva-nakade" class="section level1">
 <h1>Apurva Nakade</h1>
 <p><img src="images/me0.jpg" width="200px" class="left" /></p>
 <p>I'm a postdoc at the <a href="http://www.math.uwo.ca/">University of Western Ontario</a> working with <a href="https://jdc.math.uwo.ca/">Dan Christensen</a> and <a href="http://www.math.uwo.ca/faculty/kapulkin/">Chris Kapulkin</a>.
-I do research in algebraic topology and homotopy theory.</p>
+I am doing research in algebraic topology and homotopy theory.</p>
 <p>In addition to research, I am very passionate about improving math education. I want to
 modernize math-ed and bring it to the 21st century through the use of new technological innovations
 in teaching and in the process make it more accessible and equitable.</p>
-<p>Things that keep me busy these days: teaching <a href="https://owl.uwo.ca/portal/site/5a31b856-d356-4278-9a3a-1dfebc96e873">Math 2151A (Discrete Math for Engineers)</a>, making <a href="https://www.youtube.com/playlist?list=PLXAOfwfSuiKm3cL-JftD9ndrjYi7fPcqN">video lectures</a>, organizing the <a href="https://www.math.uwo.ca/undergraduate/directed_reading_program.html">DRP</a>.</p>
+<p>Things that keep me busy these days: teaching <a href="https://owl.uwo.ca/portal/site/5a31b856-d356-4278-9a3a-1dfebc96e873">Math 2151A (Discrete Math for Engineers)</a>, making <a href="https://www.youtube.com/playlist?list=PLXAOfwfSuiKm3cL-JftD9ndrjYi7fPcqN">video lectures</a>, organizing the <a href="https://www.math.uwo.ca/undergraduate/directed_reading_program.html">DRP</a>, organizing the topology boot-camp, applying for jobs.</p>
 
 </div>
             </section>
