--- a/me-math-machine.html
+++ b/me-math-machine.html
@@ -21,7 +21,7 @@
   <meta name="twitter:description" content="Personal Website." />
   
 
-<meta name="author" content="email: (left as an exercise to the reader)   CV, Research Statement" />
+<meta name="author" content="email: (left as an exercise to the reader)   Academic Info: CV, Research Statement (pdf), Research Statement (video), Teaching Statement, Teaching Dossier" />
 
 
 
