--- a/etc-.html
+++ b/etc-.html
@@ -21,7 +21,7 @@
   <meta name="twitter:description" content="Personal Website." />
   
 
-<meta name="author" content="email: (left as an exercise to the reader)   Academic Info: CV, Research Statement (pdf), Research Statement (video), Teaching Statement, Teaching Dossier" />
+<meta name="author" content="email: (left as an exercise to the reader)   Academic Info: CV, Research Statement (video), Teaching Portfolio" />
 
 
 
@@ -87,12 +87,12 @@
 <li class="chapter" data-level="" data-path="me-math-machine.html"><a href="me-math-machine.html#learning-to-lean"><i class="fa fa-check"></i>Learning to Lean</a></li>
 <li class="chapter" data-level="" data-path="me-math-machine.html"><a href="me-math-machine.html#read-more"><i class="fa fa-check"></i>Read more</a></li>
 </ul></li>
-<li class="chapter" data-level="" data-path="teaching.html"><a href="teaching.html"><i class="fa fa-check"></i>Teaching</a>
+<li class="chapter" data-level="" data-path="teaching-notes.html"><a href="teaching-notes.html"><i class="fa fa-check"></i>Teaching Notes</a>
 <ul>
-<li class="chapter" data-level="" data-path="teaching.html"><a href="teaching.html#directed-reading-program"><i class="fa fa-check"></i>Directed Reading Program</a></li>
-<li class="chapter" data-level="" data-path="teaching.html"><a href="teaching.html#canadausa-mathcamp"><i class="fa fa-check"></i>Canada/USA Mathcamp</a></li>
-<li class="chapter" data-level="" data-path="teaching.html"><a href="teaching.html#johns-hopkins"><i class="fa fa-check"></i>Johns Hopkins</a></li>
-<li class="chapter" data-level="" data-path="teaching.html"><a href="teaching.html#expository-notes"><i class="fa fa-check"></i>Expository Notes</a></li>
+<li class="chapter" data-level="" data-path="teaching-notes.html"><a href="teaching-notes.html#directed-reading-program"><i class="fa fa-check"></i>Directed Reading Program</a></li>
+<li class="chapter" data-level="" data-path="teaching-notes.html"><a href="teaching-notes.html#canadausa-mathcamp"><i class="fa fa-check"></i>Canada/USA Mathcamp</a></li>
+<li class="chapter" data-level="" data-path="teaching-notes.html"><a href="teaching-notes.html#johns-hopkins"><i class="fa fa-check"></i>Johns Hopkins</a></li>
+<li class="chapter" data-level="" data-path="teaching-notes.html"><a href="teaching-notes.html#expository-notes"><i class="fa fa-check"></i>Expository Notes</a></li>
 </ul></li>
 <li class="chapter" data-level="" data-path="research.html"><a href="research.html"><i class="fa fa-check"></i>Research</a>
 <ul>
