--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <meta name="twitter:description" content="Personal Website." />
   
 
-<meta name="author" content="email: (left as an exercise to the reader)   Academic Info: CV, Research Statement (pdf), Research Statement (video), Teaching Statement, Teaching Dossier" />
+<meta name="author" content="email: (left as an exercise to the reader)   Academic Info: CV, Research Statement (video), Teaching Portfolio" />
 
 
 
@@ -87,12 +87,12 @@
 <li class="chapter" data-level="" data-path="me-math-machine.html"><a href="me-math-machine.html#learning-to-lean"><i class="fa fa-check"></i>Learning to Lean</a></li>
 <li class="chapter" data-level="" data-path="me-math-machine.html"><a href="me-math-machine.html#read-more"><i class="fa fa-check"></i>Read more</a></li>
 </ul></li>
-<li class="chapter" data-level="" data-path="teaching.html"><a href="teaching.html"><i class="fa fa-check"></i>Teaching</a>
+<li class="chapter" data-level="" data-path="teaching-notes.html"><a href="teaching-notes.html"><i class="fa fa-check"></i>Teaching Notes</a>
 <ul>
-<li class="chapter" data-level="" data-path="teaching.html"><a href="teaching.html#directed-reading-program"><i class="fa fa-check"></i>Directed Reading Program</a></li>
-<li class="chapter" data-level="" data-path="teaching.html"><a href="teaching.html#canadausa-mathcamp"><i class="fa fa-check"></i>Canada/USA Mathcamp</a></li>
-<li class="chapter" data-level="" data-path="teaching.html"><a href="teaching.html#johns-hopkins"><i class="fa fa-check"></i>Johns Hopkins</a></li>
-<li class="chapter" data-level="" data-path="teaching.html"><a href="teaching.html#expository-notes"><i class="fa fa-check"></i>Expository Notes</a></li>
+<li class="chapter" data-level="" data-path="teaching-notes.html"><a href="teaching-notes.html#directed-reading-program"><i class="fa fa-check"></i>Directed Reading Program</a></li>
+<li class="chapter" data-level="" data-path="teaching-notes.html"><a href="teaching-notes.html#canadausa-mathcamp"><i class="fa fa-check"></i>Canada/USA Mathcamp</a></li>
+<li class="chapter" data-level="" data-path="teaching-notes.html"><a href="teaching-notes.html#johns-hopkins"><i class="fa fa-check"></i>Johns Hopkins</a></li>
+<li class="chapter" data-level="" data-path="teaching-notes.html"><a href="teaching-notes.html#expository-notes"><i class="fa fa-check"></i>Expository Notes</a></li>
 </ul></li>
 <li class="chapter" data-level="" data-path="research.html"><a href="research.html"><i class="fa fa-check"></i>Research</a>
 <ul>
@@ -132,7 +132,7 @@
             <section class="normal" id="section-">
 <div id="header">
 <h1 class="title">Apurva Nakade</h1>
-<p class="author"><em>email: <span onmouseover="this.innerHTML=&#39;alastname@uwo.ca&#39;" onmouseout="this.innerHTML=&#39;(left as an exercise to the reader)&#39;">(left as an exercise to the reader)</span> <br /> Academic Info: <a href="https://drive.google.com/file/d/10uLHSlp8ZBvHBC6zXaLsxmSuYq-M59xL/view?usp=sharing">CV</a>, <a href="https://drive.google.com/file/d/15HeOJjr6BuuxA0ZNCwSYeHpB2d5Z2sci/view?usp=sharing">Research Statement (pdf)</a>, <a href="https://youtu.be/rlyzT1PWw5I">Research Statement (video)</a>, <a href="https://drive.google.com/file/d/1ePTk8yzz96OEb7kpJUzF9Du4cc1bK5zE/view?usp=sharing">Teaching Statement</a>, <a href="https://drive.google.com/file/d/1v_ij1QMzXKLxECifXnMILIJlW3DQBNSY/view?usp=sharing">Teaching Dossier</a></em></p>
+<p class="author"><em>email: <span onmouseover="this.innerHTML=&#39;alastname@uwo.ca&#39;" onmouseout="this.innerHTML=&#39;(left as an exercise to the reader)&#39;">(left as an exercise to the reader)</span> <br /> Academic Info: <a href="https://drive.google.com/file/d/1CZJ4_A2ssI0-V_HszcPoEJyQC1EY2s5u/view?usp=sharing">CV</a>, <a href="https://youtu.be/rlyzT1PWw5I">Research Statement (video)</a>, <a href="teaching-portfolio/">Teaching Portfolio</a></em></p>
 </div>
 <div id="apurva-nakade" class="section level1">
 <h1>Apurva Nakade</h1>
